# Vapoursynth-EEDI2METAL

./: .clang-format  .gitignore  README.md
.github/workflows/: release.yml
lib/: CMakeLists.txt  copy_kernel.metal  eedi2_common.metal  eedi2_kernels.metal  eedi2metal.mm  utils.metal
